<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:inputType="textPersonName"
        android:id="@+id/Activity_main_NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ingreses_nombre"
        />

    <EditText
        android:inputType="phone"
        android:id="@+id/Activity_main_PHONE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ingreses_telefono"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Escolaridad_string"/>

    <Spinner
        android:id="@+id/Spinner1"
        android:entries="@array/Array_escolaridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Genero"/>

    <RadioGroup
        android:id="@+id/Genero_radio_grup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Radio_femenino"
            android:text="@string/Femenino"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Radio_Masculino"
            android:text="@string/Masculino"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/libro_favorito"/>

    <AutoCompleteTextView
        android:id="@+id/auto_complete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/libro_favorito"/>
    <CheckBox
        android:id="@+id/checkdeporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Practica_deporte"
        android:checked="false"/>
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/limpiarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpear"
        android:layout_alignParentBottom="true"/>


    </RelativeLayout>